--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "daisyui": "^2.9.0",
     "dayjs": "^1.10.8",
     "final-form": "^4.20.6",
     "graphql": "^16.3.0",
